plugins {
    id 'java-library'
    id 'maven-publish'
    alias(libs.plugins.lombok)
    id "com.diffplug.spotless" version "7.0.0"
}


version = '0.0.1'
group = 'lsd.de'


spotless {
    java {
        importOrder()
        removeUnusedImports()
        googleJavaFormat()
        formatAnnotations()
    }
}

tasks.withType(Javadoc) {
    // 1. Nur Java-Dateien (verhindert Fehler durch .txt, .png etc.)
    source = sourceSets.main.allJava

    // 2. Classpath sicherstellen
    classpath = sourceSets.main.compileClasspath

    options {
        // 3. Preview für Java 25 aktivieren
        addBooleanOption("-enable-preview", true)
        addStringOption("source", "25")
        // 4. Encoding sicherstellen (verhindert Fehler bei Umlauten)
        encoding = 'UTF-8'
        charSet = 'UTF-8'
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
    withSourcesJar()
    withJavadocJar()
}


dependencies {
    implementation libs.slf4j.api
    runtimeOnly libs.slf4j.simple

    // Lombok für den Haupt-Quellcode
    compileOnly libs.lombok
    annotationProcessor libs.lombok

    // Lombok für Test-Quellcode
    testCompileOnly libs.lombok
    testAnnotationProcessor libs.lombok
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ["--enable-preview"]
}

test {
    jvmArgs += ["--enable-preview"]
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}

